# spsc

./: .classpath  .gitignore  .hsproject  .project  .pydevproject  .scala_dependencies  Algebra.hs  Algebra.rb  Algebra_Tests.rb  All_Tests.rb  BaseSuperCompiler.hs  BasicProcessTreeBuilder.rb  BasicProcessTreeBuilder_Tests.rb  HE.hs  HE.rb  HE_Tests.rb  MSG.hs  MSG.rb  MSG_Tests.rb  Main.hs  ProcessTree.hs  ProcessTree.rb  README.md  ResidualProgramGenerator.hs  ResidualProgramGenerator.rb  ResidualProgramGenerator_Tests.rb  SLL.rb  SLLParser.rb  SLLParser_Tests.rb  SLL_Tests.rb  SLanguage.hs  SParsers.hs  ShowUtil.hs  build.sbt  he.js  parser.js  parsers.js  partial_process_tree.js  readme  readme.md  (+8 more)
docs/: GettingStarted.md  GettingStartedWeb.md  README.md  SampleAbAb.md  SampleAppendAppend.md  SampleEq2.md  SampleEqTheSame.md  SampleMember.md  SampleMemberFirstArg.md  SampleMemberSecondArg.md  SampleNotOrNot.md  SampleTasks.md  SimpleLazyFirstOrderLanguage.md
input/: append.sl
spsc-lite-clojure/: .classpath  .project
spsc-lite-haskell/: Algebra.hs  Algebra_Tests.hs  All_Tests.hs  MSG.hs  MSG_Tests.hs  ProcessTree.hs  README.md  ResidualProgramGenerator.hs  ResidualProgramGenerator_Tests.hs  ShowUtil.hs  Supercompiler.hs  Supercompiler_Tests.hs  spsc-lite-haskell.cabal
spsc-lite-idris/: .gitignore  Algebra.idr  AlgebraTests.idr  HE.idr  HETests.idr  (+19 more)
spsc-lite-rust/: Cargo.toml
spsc-lite-rust/src/: advanced_process_tree_builder.rs  algebra.rs  he.rs  language.rs  lib.rs  msg.rs  parser.rs  process_tree.rs  process_tree_builder.rs  residual_program_generator.rs
(+372 files in other folders)
