[package]
name = "spsc-lite-rust"
version = "0.1.0"
edition = "2021"
authors = ["Sergei Romanenko <sergei.romanenko@supercompilers.ru>"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
assert_matches = "1.5.0"
itertools = "0.10.3"
either = "1.6.1"
